<resources>
    <string name="app_name">FamilyMap</string>
    <string name="first_name">First Name: </string>
    <string name="last_name">Last Name: </string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email: </string>
    <string name="server_host">Server Host: </string>
    <string name="server_port">Server Port: </string>
    <string name="server_host_local">10.0.2.2</string>
    <string name="server_port_8080">8080</string>
    <string name="male">M</string>
    <string name="female">F</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_person">PersonActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_search">SearchActivity</string>
</resources>