<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="TITLE"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:id="@+id/hostTextView"
                android:text="@string/server_host"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/hostEditText"
                android:inputType="text"
                android:text="@string/server_host_local"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/portTextView"
                android:text="@string/server_port"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/portEditText"
                android:inputType="text"
                android:text="@string/server_port_8080"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/usernameTextView"
                android:text="@string/username"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/usernameEditText"
                android:inputType="text"
                android:text="sheila"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/passwordTextView"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <EditText
                android:id="@+id/passwordEditText"
                android:inputType="text"
                android:text="parker"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/firstNameTextView"
                android:text="@string/first_name"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/firstNameEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/lastNameTextView"
                android:text="@string/last_name"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/emailTextView"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/emailEditText"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />
            <RadioButton android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:checked="true"/>
        </RadioGroup>
        </TableRow>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/login"/>
            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/register"/>


    </TableLayout>

</LinearLayout>
